--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1690,6 +1690,18 @@ input[type='file'].hide-input {
     @include simple_transition(.3s);
 }
 
+#search-result-parent {
+    position: relative;
+    &:after {
+        content: '';
+        right: 10px;
+        border-style: solid;
+        border-width: 14px 6px 0 6px;
+        border-color: #616161 transparent transparent transparent;
+        @include vertical-align(absolute);
+    }
+}
+
 .popover-el {
     cursor: pointer;
 }
